# magnetos

./: .gitignore  README.md  README_CN.md  magnetos.py  pyproject.toml  requirements.txt
magnetos/: __init__.py
magnetos/cracker/: steg_hide_cracker.py
magnetos/crypto/: __init__.py  caesar.py  caesar_odd_even.py  caesar_printable.py  caesar_rail_fence_crack.py  mobile_keyboard.py  polybius_square_cipher.py  quoted_printable.py  qwerty_cipher.py  rail_fence_cipher.py  rc4.py  rot13.py  shadow_code.py  vigenere_cipher.py  xxencode.py
magnetos/fuzzing/: __init__.py  what_code_scheme.py  what_encode.py  what_format.py  what_steg.py
magnetos/proxy/: __init__.py  reverse_proxy.py
magnetos/utils/: __init__.py  converter.py  file_hash.py  file_strings.py  find_ctf_flag.py  string_utils.py  web_get.py
tests/: __init__.py  test_converter.py  test_crypto.py  test_what_encode.py
